--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "postcss": "8.5.3",
     "react": "19.0.0",
     "react-dom": "19.0.0",
+    "sweetalert2": "^11.17.2",
     "tailwind-merge": "^3.0.2",
     "tailwindcss": "^3.4.1",
     "tailwindcss-animate": "^1.0.7",
