--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@types/react-dom": "19.0.4",
     "autoprefixer": "10.4.20",
     "axios": "^1.8.1",
+    "chart.js": "^4.4.8",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "eslint": "9.21.0",
@@ -23,6 +24,7 @@
     "next": "15.2.1",
     "postcss": "8.5.3",
     "react": "19.0.0",
+    "react-chartjs-2": "^5.3.0",
     "react-dom": "19.0.0",
     "sweetalert2": "^11.17.2",
     "tailwind-merge": "^3.0.2",
