--- a/package.json
+++ b/package.json
@@ -26,10 +26,15 @@
     "react": "19.0.0",
     "react-chartjs-2": "^5.3.0",
     "react-dom": "19.0.0",
+    "react-slick": "^0.30.3",
+    "slick-carousel": "^1.8.1",
     "sweetalert2": "^11.17.2",
     "tailwind-merge": "^3.0.2",
     "tailwindcss": "^3.4.1",
     "tailwindcss-animate": "^1.0.7",
     "typescript": "5.8.2"
+  },
+  "devDependencies": {
+    "@types/react-slick": "^0.23.13"
   }
 }
