--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "clsx": "^2.1.1",
     "eslint": "9.21.0",
     "eslint-config-next": "15.2.1",
+    "file-saver": "^2.0.5",
     "lucide-react": "^0.477.0",
     "next": "15.2.1",
     "postcss": "8.5.3",
